2002-06-24  Per Bothner  <per@bothner.com>

	* XMLParser.java:  New class, extends gnu.xml.XMLParserChar.
	* Makefile.am (java_sources);  Add new file.
	* Document.java (document):  Rename static helper methods to 'parse'.
	Inline ParsedXMLToConsumer.parse, which is now gone.
	Allocate new XMLParser instance.

2002-06-10  Per Bothner  <per@bothner.com>

	* NamedDescendants.java:  Support descdendant-or-self.

	* NodeType.java (coerceOrForce):  Better exception message.

2002-05-19  Per Bothner  <per@bothner.com>

	* ElementType.java (coerceOrNull):  Test coerceOrNull result for null.

2002-05-06  Per Bothner  <per@bothner.com>

	* Focus.java.in:  New class, moved from gnu/xquery/util.
	* Makefile.am (Focus.java):  New rule.

	* NamedChildren.java (namedChildren):  Use TreePosition push/pop.

2002-04-07  Per Bothner  <per@bothner.com>

	* NamedAttributes.java:  Take single QName argument.

	* ElementType.java (coerceOrNull):  Use NodeType's coerceOrNull.
	* NamedDescendants.java:  Accept general NodePredicate rather than
	just a GroupRedpcate.  Should rename class!
	* NamedChildren.java:  Likewise.
	(namedChildren):  Use nextNodeIndex.

	* NodeType.java:  Implement NodePredicate and Externalizable.
	(writeExternal, readExternal):  New methods.
	(TEXT_OK, GROUP_OK):  New constants.
	(kinds):  New field.
	(<init>):  Set kinds field.
	(emitCoerceFromObject):  Also push value of kinds.
	(coerceFromObject):  Cal ceorceForce instead of coerce.
	(isInstance):  New methods.
	(coerceOrNull, ceorceForce):  New methods.
	(coerce):  Remove method.

2002-03-07  Per Bothner  <per@bothner.com>

	* ElementType.java:  New constructor.
	(getNamespaceURI, getLocalName):  New accessor methods.
	(isInstance):  Check that argument triple is actually a group.
	(coerceOrNull):  Likewise.

	* NamedDescendants.java (apply, namedDescendants):  Take a single
	GroupPredicate argument instead of a namespaceURL+localName pair.