@@ -1,3 +1,9 @@
+2002-06-26  Per Bothner  <per@bothner.com>
+
+	* XMLParser.java:  Share buffer with LineBufferedReader.
+	(fill):  New method, to synchronize and read from LineBufferedReader.
+	(error, getName, getLineNumber, getColumnNjmber):  New methods.
+
 2002-06-24  Per Bothner  <per@bothner.com>
 
 	* XMLParser.java:  New class, extends gnu.xml.XMLParserChar.
